kubernetes/postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-db
  labels:
    app: postgres-db
spec:
  containers:
    - name: postgres
      image: postgres:12.0-alpine
      ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
spec:
  selector:
    app: postgres-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
